// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductList component renders correctly when products are available 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="product-list"
      >
        <div
          class="productItem"
        >
          <div
            class="image"
          >
            <img
              alt="productImage"
              src="https://example.com/product1.jpg"
            />
          </div>
          <div
            class="productDes"
          >
            <p
              class="name"
            >
               
              <b>
                Product 1
              </b>
            </p>
            <p
              class="seller"
            >
               
              seller1
            </p>
            <div
              class="price-cart"
            >
              <p>
                 
                <b>
                  $
                  9.99
                </b>
              </p>
              <i
                class="fa-solid fa-cart-plus"
              />
            </div>
          </div>
        </div>
        <div
          class="productItem"
        >
          <div
            class="image"
          >
            <img
              alt="productImage"
              src="https://example.com/product2.jpg"
            />
          </div>
          <div
            class="productDes"
          >
            <p
              class="name"
            >
               
              <b>
                Product 2
              </b>
            </p>
            <p
              class="seller"
            >
               
              seller2
            </p>
            <div
              class="price-cart"
            >
              <p>
                 
                <b>
                  $
                  19.99
                </b>
              </p>
              <i
                class="fa-solid fa-cart-plus"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="product-list"
    >
      <div
        class="productItem"
      >
        <div
          class="image"
        >
          <img
            alt="productImage"
            src="https://example.com/product1.jpg"
          />
        </div>
        <div
          class="productDes"
        >
          <p
            class="name"
          >
             
            <b>
              Product 1
            </b>
          </p>
          <p
            class="seller"
          >
             
            seller1
          </p>
          <div
            class="price-cart"
          >
            <p>
               
              <b>
                $
                9.99
              </b>
            </p>
            <i
              class="fa-solid fa-cart-plus"
            />
          </div>
        </div>
      </div>
      <div
        class="productItem"
      >
        <div
          class="image"
        >
          <img
            alt="productImage"
            src="https://example.com/product2.jpg"
          />
        </div>
        <div
          class="productDes"
        >
          <p
            class="name"
          >
             
            <b>
              Product 2
            </b>
          </p>
          <p
            class="seller"
          >
             
            seller2
          </p>
          <div
            class="price-cart"
          >
            <p>
               
              <b>
                $
                19.99
              </b>
            </p>
            <i
              class="fa-solid fa-cart-plus"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProductList component renders correctly when products are not available 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="product-list"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="product-list"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
